@@ -1102,6 +1102,7 @@ int do_action(buffer *b, action a, int64_t c, char *p) {
 			refresh_window(b);
 			draw_status_bar();
 		}
+		cur_buffer->act = ++buffer_actuations;
 		return OK;
 
 	case FIND_A:
@@ -1582,6 +1583,7 @@ int do_action(buffer *b, action a, int64_t c, char *p) {
 			unset_interactive_mode();
 			exit(0);
 		}
+		cur_buffer->act = ++buffer_actuations;
 		keep_cursor_on_screen(cur_buffer);
 		reset_window();
 
@@ -1594,6 +1596,7 @@ int do_action(buffer *b, action a, int64_t c, char *p) {
 	case NEXTDOC_A: /* Was NEXT_BUFFER: */
 		if (b->b_node.next->next) cur_buffer = (buffer *)b->b_node.next;
 		else cur_buffer = (buffer *)buffers.head;
+		cur_buffer->act = ++buffer_actuations;
 		keep_cursor_on_screen(cur_buffer);
 		reset_window();
 		need_attr_update = false;
@@ -1603,6 +1606,7 @@ int do_action(buffer *b, action a, int64_t c, char *p) {
 	case PREVDOC_A:
 		if (b->b_node.prev->prev) cur_buffer = (buffer *)b->b_node.prev;
 		else cur_buffer = (buffer *)buffers.tail_pred;
+		cur_buffer->act = ++buffer_actuations;
 		keep_cursor_on_screen(cur_buffer);
 		reset_window();
 		need_attr_update = false;
@@ -1613,6 +1617,7 @@ int do_action(buffer *b, action a, int64_t c, char *p) {
 		const int n = request_document();
 		if (n < 0 || !(b = get_nth_buffer(n))) return ERROR;
 		cur_buffer = b;
+		cur_buffer->act = ++buffer_actuations;
 		keep_cursor_on_screen(cur_buffer);
 		reset_window();
 		need_attr_update = false;
