@@ -5,6 +5,9 @@
   * Fixed document reordering in SelectDoc requester when first or last
     document wraps around to the other end of the document list.
 
+  * After closing the current document, the most recently active adjacent
+    document is chosen as the new current document.
+
 3.3.2 2022-09-13
 
   * Fixed issue where autocomplete could fail/crash with UTF-8 characters.
